--- a/public/views/index.html
+++ b/public/views/index.html
@@ -55,7 +55,7 @@
     <table class="pull-right col-sm-4 offset-sm-6">
         <tr>
             <td>subTotal</td>
-            <td>{{ subTotal | currency}}</td>
+            <td>{{ subtotal | currency}}</td>
         </tr>            
         <tr>
             <td>tax(5%)</td>
