--- a/public/views/index.html
+++ b/public/views/index.html
@@ -68,6 +68,7 @@
     </table>
 
 </div>
+<a  class="btn btn-primary" href="/#!/">back</a>
 <button type="button" class="btn btn-secondary" ng-click="save()" ng-disabled="details.length == 0 || details == null">Finished</button>
 
 
