view items(create, edit)

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -13,13 +13,13 @@
 
   <tbody>
     <% @items.each do |item| %>
-      <tr>
-        <td><%= item.name %></td>
-        <td><%= item.price %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <td><%= item.name %></td>
+      <td><%= item.price %></td>
+      <td><%= link_to 'Show', item %></td>
+      <td><%= link_to 'Edit', edit_item_path(item) %></td>
+      <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
     <% end %>
   </tbody>
 </table>
@@ -27,3 +27,7 @@
 <br>
 
 <%= link_to 'New Item', new_item_path %>
+<%= link_to 'Back', "localhost:3000" %>
+
+
+<!-- <a class="nav-link" href="localhost:3000/#!/">Back</a> -->
