--- a/public/views/home.html
+++ b/public/views/home.html
@@ -20,11 +20,14 @@
             <td>{{ i.total }}</td>
             <td>{{ i.created_at | date:'dd/MM/yyyy' }}</td>
             <td>
-                <button type="button" class="btn btn-primary" aria-label="Left Align" ng-click="editItem(i)">
+                <button type="button" class="btn btn-primary" aria-label="Left Align" ng-click="editInvoice(i)">
                     <i class="fas fa-edit"></i>
                 </button>
                 <button type="button" class="btn btn-danger" aria-label="Left Align" ng-click="deleteInvoice(i)">
                     <i class="fas fa-trash-alt"></i>
+                </button>
+                  <button type="button" class="btn btn-danger" aria-label="Left Align" ng-click="viewPDF(i.id)">
+                   PDF
                 </button>
             </td>
         </tr>
