--- a/public/views/nav.html
+++ b/public/views/nav.html
@@ -15,14 +15,12 @@
                 <a class="nav-link" href="/#!/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/#!/index">Invoices</a>
+                <a class="nav-link" href="/#!/index">New Invoice</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/#!/items">Items</a>
             </li>
-             <li class="nav-item">
-                <a class="nav-link" href="/invoices">test</a>
-            </li>
+             
             
         </ul>
     </div>
